# ToySFG

./: CMakeLists.txt  README.md  main.cpp  mainFakeTOF.cpp
macros/: ComputeCrossingMatrix.c  ComputeCrossingMatrixTof.c  TimeOffsetCalib.c  TimeOffsetCalibTof.cpp  common_utils.h  dummygraph.c  graph_from_file.c  graph_reso.c  graph_sigmaOffset_vs_iter.c  overlay_graphs.c  readMatchingHits.c  sigmaOffset_vs_channels.c  sigmaOffset_vs_nhits.c  stationary.py
src/: FakeSFG.cxx  FakeSFG.hxx  FakeTOF.cxx  FakeTOF.hxx
